# key-value-NVS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/app/inc/: map.h  storage.h
source/app/src/: main.c  map.c  storage.c
source/hardware/mx25_mock/inc/: mx25_flash_driver.h
source/hardware/mx25_mock/src/: mx25_flash_driver_mock.c
test/unit_test/: CMakeLists.txt  tests.cpp
